# ChangeLog for dev-util/svk
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/svk/ChangeLog,v 1.37 2009/04/25 07:57:47 patrick Exp $

  25 Apr 2009; Patrick Lauer <patrick@gentoo.org> svk-2.0.2:
  Removing broken configure placeholder function. Now installs some files!
  Fixes #264877, thanks to Tove

  09 Jan 2009; Joseph Jezak <josejx@gentoo.org> svk-2.0.2.ebuild:
  Marked ~ppc for bug #253448.

  08 Jan 2009; Raúl Porcel <armin76@gentoo.org> svk-2.0.2.ebuild:
  Add ~ia64 wrt #253448

  02 Jan 2009; Friedrich Oslage <bluebird@gentoo.org> svk-2.0.2.ebuild:
  Re-Add ~sparc keyword, bug #253448

*svk-2.0.2 (02 Jan 2009)

  02 Jan 2009; Jeremy Olexa <darkside@gentoo.org> metadata.xml,
  -svk-1.06.ebuild, -svk-1.06-r1.ebuild, -svk-1.07.ebuild,
  -svk-1.07-r1.ebuild, +svk-2.0.2.ebuild:
  (non maintainer commit) Version bump thanks to the work by Mark Davies in
  bug 162743

  18 Nov 2008; Torsten Veller <tove@gentoo.org> svk-1.06.ebuild,
  svk-1.06-r1.ebuild, svk-1.07.ebuild, svk-1.07-r1.ebuild, svk-1.08.ebuild:
  New virtuals: Compress-Zlib Locale-Maketext-Simple Pod-Escapes Pod-Simple

  16 Aug 2008; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove kang from metadata.xml (#51508)

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  22 Aug 2006; Guillaume Destuynder <kang@gentoo.org> svk-1.08.ebuild:
  Fixes QA issue #143309 (svnmirror)

*svk-1.08 (08 Aug 2006)

  08 Aug 2006; Guillaume Destuynder <kang@gentoo.org>
  -files/svk-1.00-nognupgtest.patch, -files/svk-1.01-nognupgtest.patch,
  -files/svk-1.02-nognupgtest.patch, -files/svk-1.04-nognupgtest.patch,
  -files/svk-1.05-nognupgtest.patch, +files/svk-1.08-xxdiff.patch,
  -svk-1.00.ebuild, -svk-1.01.ebuild, -svk-1.02.ebuild, -svk-1.04.ebuild,
  -svk-1.05.ebuild, +svk-1.08.ebuild:
  bump to 1.08. Removed svn-mirror useflag, not very useful. Fix #141664
  Cleaned up old versions.

*svk-1.07-r1 (04 Mar 2006)