@@ -1,7 +1,7 @@
 AUX svk-1.08-xxdiff.patch 1020 RMD160 d83e4859028b3c85809dedef065ba802748cab22 SHA1 a2c168975c24b40bceff9408a7c97367d807226c SHA256 af56f8df413b812a2a21cbc072022e473c02da3753cbcade9631103c5fc76cfd
 DIST SVK-1.08.tar.gz 265976 RMD160 517fb2000cdf462eaa2587874e5ddf713dae773c SHA1 a917d1cd036cede766f7daf0856b0d0cb619e160 SHA256 12d6ca2eee779e200123c9cf3679938c9ef87e91623ee9621f6276edd65928d4
 DIST SVK-v2.0.2.tar.gz 445041 RMD160 5eeaa465355cd3026f7230b120d83051705fc86d SHA1 8d691c6e6b914e5b8e71ba75dee60b61fe90e54f SHA256 405b59c6398c50356f036292668bd653f43e296a3b301be64c90ffcd0e169530
-EBUILD svk-1.08.ebuild 2026 RMD160 9cb68d2103e861bf20fb690cacf692fb30d516d2 SHA1 4f00521dc7e713bcb44c5c9ec1db2731fdb3bb87 SHA256 db2984f012856c3be3896af6ae5ab26f3514a9a13ddb0ca1306aabd804a4b5f1
-EBUILD svk-2.0.2.ebuild 1915 RMD160 36dcdf4f81e896b914aeb4326e0e0a316ec10d3f SHA1 5ae96e824b7767b30c0d88026fce61ee4a5bf391 SHA256 606b5bc11f345264fd2586e6e7b028d10e7a6e239344accb017e3633354bb8b0
-MISC ChangeLog 5608 RMD160 56d9f05f5e92452c2b7429c4ae0229b0f2441a74 SHA1 47123aa4ede52bf6db875a5a494db791131f4010 SHA256 924b9ad31625036088417539abc8548e604a4726cb15e14643bf397bbb2060dc
+EBUILD svk-1.08.ebuild 2024 RMD160 1472d26902807666abc515cdb86c469e30fcc626 SHA1 72713c7581d9424bb69b1160072f5915aa11a51f SHA256 0b721afd5561325e0cdf64767666e8243c3578f0f04ad0b6299351fb7f0167c0
+EBUILD svk-2.0.2.ebuild 1910 RMD160 70404de7dc9e64c055228c83cd5d6682d807abe6 SHA1 04f48cadbedce15d13caf37ff17827656db57c81 SHA256 b3117c21806582e521f051c97773cca83f31f28fd308567a3984c3a2aad6cfb2
+MISC ChangeLog 5728 RMD160 0c0cd463000c6ded5f1a6400ab19530cbf3df9f4 SHA1 78cda2c0cf3b8f901029030a204b68d80d2db06c SHA256 9a92024b54c455744a1569579fc95e6b8dc5eca5ab2bc5fdb57f3b6345799b7c
 MISC metadata.xml 449 RMD160 9398e8519bf0b3ddf12901e50398785ae6614eca SHA1 7cc42b966dec09d468a51d77d0c8d04733f14d54 SHA256 7ef530ec861b3ee1693104edb0a1aca0f860c04c38bcce66d43674fff82ff20d
