@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/svk/svk-2.0.2.ebuild,v 1.5 2009/04/25 07:57:47 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/svk/svk-2.0.2.ebuild,v 1.6 2009/07/19 17:49:13 tove Exp $
 
 EAPI=2
 
@@ -54,7 +54,7 @@ DEPEND="
 	log4p? ( dev-perl/Log-Log4perl )
 	>=dev-perl/SVN-Mirror-0.71
 	patch? (
-		virtual/perl-Compress-Zlib
+		virtual/perl-IO-Compress
 		dev-perl/FreezeThaw
 	)
 	crypt? ( app-crypt/gnupg )
