@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/svk
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/svk/ChangeLog,v 1.37 2009/04/25 07:57:47 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/svk/ChangeLog,v 1.38 2009/07/19 17:49:13 tove Exp $
+
+  19 Jul 2009; Torsten Veller <tove@gentoo.org> svk-1.08.ebuild,
+  svk-2.0.2.ebuild:
+  IO-Compress replaces Compress-Zlib
 
   25 Apr 2009; Patrick Lauer <patrick@gentoo.org> svk-2.0.2:
   Removing broken configure placeholder function. Now installs some files!
